--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,46 @@ h2{
 h3{
     margin-bottom:20px !important; 
 }
+
+.navbar-toggler {
+    border: none !important;
+    background: transparent !important;
+    padding: 0 !important;
+    border-radius: 0 !important;
+    outline: none !important;
+    box-shadow: none !important;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+  }
+  
+  .hamburger-icon {
+    position: relative;
+    width: 30px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .hamburger-icon .line {
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    transition: 0.3s ease;
+  }
+  
+  .hamburger-icon .line.top {
+    transform-origin: top left;
+  }
+  
+  .hamburger-icon .line.middle {
+    transform-origin: center;
+  }
+  
+  .hamburger-icon .line.bottom {
+    transform-origin: bottom left;
+  }
