--- a/app/globals.css
+++ b/app/globals.css
@@ -1,59 +1,26 @@
-section{
-    margin-top: 100px;
+* {
+  /* font-family: "Poppins", serif; */
+  font-family: Arial;
 }
 
-h1{
-    margin-bottom:30px !important; 
-    text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+section {
+  margin-top: 100px;
 }
 
-h2{
-    margin-bottom:20px !important; 
+
+
+h1 {
+  margin-bottom: 30px !important;
+  text-align: center;
 }
 
-h3{
-    margin-bottom:20px !important; 
+h2 {
+  margin-bottom: 20px !important;
 }
 
-.navbar-toggler {
-    border: none !important;
-    background: transparent !important;
-    padding: 0 !important;
-    border-radius: 0 !important;
-    outline: none !important;
-    box-shadow: none !important;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 30px;
-    width: 30px;
-  }
-  
-  .hamburger-icon {
-    position: relative;
-    width: 30px;
-    height: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .hamburger-icon .line {
-    width: 100%;
-    height: 3px;
-    background-color: #000;
-    transition: 0.3s ease;
-  }
-  
-  .hamburger-icon .line.top {
-    transform-origin: top left;
-  }
-  
-  .hamburger-icon .line.middle {
-    transform-origin: center;
-  }
-  
-  .hamburger-icon .line.bottom {
-    transform-origin: bottom left;
-  }
+h3 {
+  margin-bottom: 20px !important;
+}
